--- a/src/PFJSR/PFJSR.fsproj
+++ b/src/PFJSR/PFJSR.fsproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net5;net461</TargetFrameworks>
+    <TargetFramework>net461</TargetFramework>
     <AssemblyName>PFJSR.csr</AssemblyName>
+    <OutputPath>..\..\..\CSR\CSRDll\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Data.fs" />
     <Compile Include="Console.fs" />
     <Compile Include="Plugin.fs" />
     <Compile Include="CSR.fs" />
@@ -24,5 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\PFJSRBDSAPI\PFJSRBDSAPI.csproj" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;cd ..&#xD;&#xA;move &quot;$(TargetPath)&quot; &quot;$(TargetFileName)&quot;&#xD;&#xA;move &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(TargetName).pdb&quot;&#xD;&#xA;rd /s/q &quot;$(TargetDir)&quot;" />
+  </Target>
 
 </Project>
