--- a/src/PFJSRBDSAPI/PFJSRBDSAPI.csproj
+++ b/src/PFJSRBDSAPI/PFJSRBDSAPI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5;net461</TargetFrameworks>
+    <TargetFrameworks>net461</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
