--- a/src/PFJSR/PFJSR.fsproj
+++ b/src/PFJSR/PFJSR.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Data.fs" />
     <Compile Include="NetJS\nativefunc.fs" />
     <Compile Include="NetJS\jsr.fs" />
+    <Compile Include="NativeJS\scripts.fs" />
     <Compile Include="Loader.fs" />
     <Compile Include="Plugin.fs" />
     <Compile Include="CSR.fs" />
