--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,12 +27,8 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: '$(Pipeline.Workspace)\src\PFJSR\bin\Release'
     artifact: 'dist'
     publishLocation: 'pipeline'
