--- a/src/PFJSR/PFJSR.fsproj
+++ b/src/PFJSR/PFJSR.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net461;net5</TargetFrameworks>
+    <TargetFrameworks>net461</TargetFrameworks>
     <AssemblyName>PFJSR.csr</AssemblyName>
     <OutputPath></OutputPath>
     <Version>0.0.5</Version>
@@ -32,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Colorful.Console" Version="1.2.15" />
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
     <PackageReference Include="Fody" Version="6.1.0">
@@ -46,8 +50,9 @@
     <ProjectReference Include="..\PFJSRBDSAPI\PFJSRBDSAPI.csproj" />
   </ItemGroup>
 
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;set CopyTargetPath=%25cd%25\CSR\CSRDll\&#xD;&#xA;echo 复制CSR.DLL到%25CopyTargetPath%25&#xD;&#xA;if exist %25CopyTargetPath%25 (&#xD;&#xA;    move &quot;$(TargetPath)&quot; &quot;%25CopyTargetPath%25$(TargetFileName)&quot;&#xD;&#xA;    move &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;%25CopyTargetPath%25$(TargetName).pdb&quot;&#xD;&#xA;    rd /s/q &quot;$(TargetDir)&quot;&#xD;&#xA;)&#xD;&#xA;" />
+    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;set CopyTargetPath=%25cd%25\CSR\CSRDll\&#xD;&#xA;echo 复制CSR.DLL到%25CopyTargetPath%25&#xD;&#xA;if exist &quot;%25CopyTargetPath%25&quot; (&#xD;&#xA;    move &quot;$(TargetPath)&quot; &quot;%25CopyTargetPath%25$(TargetFileName)&quot;&#xD;&#xA;    move &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;%25CopyTargetPath%25$(TargetName).pdb&quot;&#xD;&#xA;    if exist &quot;$(TargetDir)$(TargetName).deps.json&quot; (&#xD;&#xA;        move &quot;$(TargetDir)$(TargetName).deps.json&quot; &quot;%25CopyTargetPath%25$(TargetName).deps.json&quot;&#xD;&#xA;    )&#xD;&#xA;)&#xD;&#xA;" />
   </Target>
 
 </Project>
