--- a/src/PFJSR/PFJSR.fsproj
+++ b/src/PFJSR/PFJSR.fsproj
@@ -36,7 +36,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Colorful.Console" Version="1.2.15" />
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
     <PackageReference Include="Fody" Version="6.1.0">
       <PrivateAssets>all</PrivateAssets>
@@ -44,6 +43,7 @@
     </PackageReference>
     <PackageReference Include="Jint" Version="3.0.0-beta-2002" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
   </ItemGroup>
 
   <ItemGroup>
