--- a/src/PFJSR/PFJSR.fsproj
+++ b/src/PFJSR/PFJSR.fsproj
@@ -50,6 +50,10 @@
     <ProjectReference Include="..\PFJSRBDSAPI\PFJSRBDSAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Web" />
+  </ItemGroup>
+
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;cd ..&#xD;&#xA;set CopyTargetPath=%25cd%25\CSR\CSRDll\&#xD;&#xA;echo 复制CSR.DLL到%25CopyTargetPath%25&#xD;&#xA;if exist &quot;%25CopyTargetPath%25&quot; (&#xD;&#xA;    move &quot;$(TargetPath)&quot; &quot;%25CopyTargetPath%25$(TargetFileName)&quot;&#xD;&#xA;    move &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;%25CopyTargetPath%25$(TargetName).pdb&quot;&#xD;&#xA;    if exist &quot;$(TargetDir)$(TargetName).deps.json&quot; (&#xD;&#xA;        move &quot;$(TargetDir)$(TargetName).deps.json&quot; &quot;%25CopyTargetPath%25$(TargetName).deps.json&quot;&#xD;&#xA;    )&#xD;&#xA;)&#xD;&#xA;" />
