--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,8 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'custom'
-    arguments: 'nuget sources Add -Name "JintMyGet" -Source https://www.myget.org/F/jint/api/v3/index.json'
-    
+    arguments: 'sources Add -Name "JintMyGet" -Source https://www.myget.org/F/jint/api/v3/index.json'
+
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
