--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,11 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    command: 'custom'
+    arguments: 'sources Enable -Name "JintMyGet"'
+
+- task: NuGetCommand@2
+  inputs:
     restoreSolution: '$(solution)'
 
 - task: VSBuild@1
