--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,16 +21,12 @@ steps:
   inputs:
     command: 'custom'
     arguments: 'sources Add -Name "JintMyGet" -Source https://www.myget.org/F/jint/api/v3/index.json'
-
+ 
 - task: NuGetCommand@2
   inputs:
-    command: 'custom'
-    arguments: 'sources Enable -Name "JintMyGet"'
-
-- task: NuGetCommand@2
-  inputs:
+    command: 'restore'
     restoreSolution: '$(solution)'
-
+    arguments: '-source "https://www.myget.org/F/jint/api/v3/index.json;https://api.nuget.org/v3/index.json;"'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
