Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'custom'
-    arguments: 'restore $(solution) -Verbosity Detailed -NonInteractive -source "https://www.myget.org/F/jint/api/v3/index.json;https://api.nuget.org/v3/index.json"'
+    arguments: 'restore $(solution) -Verbosity Detailed -NonInteractive -source ""https://www.myget.org/F/jint/api/v3/index.json;https://api.nuget.org/v3/index.json""'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
